packages/flutterxel/src/flutterxel.h

typedef void (*FlutterxelCoreFrameCallback)(void* user_data);
FFI_PLUGIN_EXPORT uint32_t flutterxel_core_version_major(void);
FFI_PLUGIN_EXPORT uint32_t flutterxel_core_version_minor(void);
FFI_PLUGIN_EXPORT uint32_t flutterxel_core_version_patch(void);
FFI_PLUGIN_EXPORT bool flutterxel_core_init(
    int32_t width,
    int32_t height,
    const char* title,
    int32_t fps,
    int32_t quit_key,
    int32_t display_scale,
    int32_t capture_scale,
    int32_t capture_sec);
FFI_PLUGIN_EXPORT bool flutterxel_core_quit(void);
FFI_PLUGIN_EXPORT bool flutterxel_core_run(
    FlutterxelCoreFrameCallback update,
    void* update_user_data,
    FlutterxelCoreFrameCallback draw,
    void* draw_user_data);
FFI_PLUGIN_EXPORT bool flutterxel_core_flip(void);
FFI_PLUGIN_EXPORT bool flutterxel_core_show(void);
FFI_PLUGIN_EXPORT bool flutterxel_core_title(const char* title);
FFI_PLUGIN_EXPORT uint64_t flutterxel_core_frame_count(void);
FFI_PLUGIN_EXPORT const int32_t* flutterxel_core_framebuffer_ptr(void);
FFI_PLUGIN_EXPORT size_t flutterxel_core_framebuffer_len(void);
FFI_PLUGIN_EXPORT bool flutterxel_core_btn(int32_t key);
FFI_PLUGIN_EXPORT bool flutterxel_core_btnp(int32_t key,
                                             int32_t hold,
                                             int32_t period);
FFI_PLUGIN_EXPORT bool flutterxel_core_btnr(int32_t key);
FFI_PLUGIN_EXPORT int32_t flutterxel_core_btnv(int32_t key);
FFI_PLUGIN_EXPORT bool flutterxel_core_mouse(bool visible);
FFI_PLUGIN_EXPORT bool flutterxel_core_warp_mouse(double x, double y);
FFI_PLUGIN_EXPORT bool flutterxel_core_set_btn_state(int32_t key,
                                                      bool pressed);
FFI_PLUGIN_EXPORT bool flutterxel_core_set_btn_value(int32_t key,
                                                      int32_t value);
FFI_PLUGIN_EXPORT bool flutterxel_core_cls(int32_t col);
FFI_PLUGIN_EXPORT bool flutterxel_core_camera(int32_t x, int32_t y);
FFI_PLUGIN_EXPORT bool flutterxel_core_clip(int32_t x,
                                             int32_t y,
                                             int32_t w,
                                             int32_t h);
FFI_PLUGIN_EXPORT bool flutterxel_core_pal(int32_t col1, int32_t col2);
FFI_PLUGIN_EXPORT bool flutterxel_core_pset(int32_t x, int32_t y, int32_t col);
FFI_PLUGIN_EXPORT int32_t flutterxel_core_pget(int32_t x, int32_t y);
FFI_PLUGIN_EXPORT bool flutterxel_core_line(int32_t x1,
                                             int32_t y1,
                                             int32_t x2,
                                             int32_t y2,
                                             int32_t col);