packages/flutterxel/lib/flutterxel_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/flutterxel.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class FlutterxelBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
  _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  FlutterxelBindings(ffi.DynamicLibrary dynamicLibrary)
    : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  FlutterxelBindings.fromLookup(
    ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName) lookup,
  ) : _lookup = lookup;

  int flutterxel_core_version_major() {
    return _flutterxel_core_version_major();
  }

  late final _flutterxel_core_version_majorPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>(
        'flutterxel_core_version_major',
      );
  late final _flutterxel_core_version_major = _flutterxel_core_version_majorPtr
      .asFunction<int Function()>();

  int flutterxel_core_version_minor() {
    return _flutterxel_core_version_minor();
  }

  late final _flutterxel_core_version_minorPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>(
        'flutterxel_core_version_minor',
      );
  late final _flutterxel_core_version_minor = _flutterxel_core_version_minorPtr
      .asFunction<int Function()>();

  int flutterxel_core_version_patch() {
    return _flutterxel_core_version_patch();
  }

  late final _flutterxel_core_version_patchPtr =
      _lookup<ffi.NativeFunction<ffi.Uint32 Function()>>(
        'flutterxel_core_version_patch',
      );
  late final _flutterxel_core_version_patch = _flutterxel_core_version_patchPtr
      .asFunction<int Function()>();

  bool flutterxel_core_init(
    int width,
    int height,
    ffi.Pointer<ffi.Char> title,
    int fps,
    int quit_key,
    int display_scale,
    int capture_scale,
    int capture_sec,
  ) {
    return _flutterxel_core_init(
      width,
      height,
      title,
      fps,
      quit_key,
      display_scale,
      capture_scale,
      capture_sec,
    );
  }

  late final _flutterxel_core_initPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Int32,
            ffi.Int32,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
          )
        >
      >('flutterxel_core_init');
  late final _flutterxel_core_init = _flutterxel_core_initPtr
      .asFunction<
        bool Function(int, int, ffi.Pointer<ffi.Char>, int, int, int, int, int)
      >();

  bool flutterxel_core_quit() {
    return _flutterxel_core_quit();
  }

  late final _flutterxel_core_quitPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>('flutterxel_core_quit');
  late final _flutterxel_core_quit = _flutterxel_core_quitPtr
      .asFunction<bool Function()>();

  bool flutterxel_core_run(
    FlutterxelCoreFrameCallback update,
    ffi.Pointer<ffi.Void> update_user_data,
    FlutterxelCoreFrameCallback draw,
    ffi.Pointer<ffi.Void> draw_user_data,
  ) {
    return _flutterxel_core_run(update, update_user_data, draw, draw_user_data);
  }

  late final _flutterxel_core_runPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            FlutterxelCoreFrameCallback,
            ffi.Pointer<ffi.Void>,
            FlutterxelCoreFrameCallback,
            ffi.Pointer<ffi.Void>,
          )
        >
      >('flutterxel_core_run');
  late final _flutterxel_core_run = _flutterxel_core_runPtr
      .asFunction<
        bool Function(
          FlutterxelCoreFrameCallback,
          ffi.Pointer<ffi.Void>,
          FlutterxelCoreFrameCallback,
          ffi.Pointer<ffi.Void>,
        )
      >();

  bool flutterxel_core_flip() {
    return _flutterxel_core_flip();
  }

  late final _flutterxel_core_flipPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>('flutterxel_core_flip');
  late final _flutterxel_core_flip = _flutterxel_core_flipPtr
      .asFunction<bool Function()>();

  bool flutterxel_core_show() {
    return _flutterxel_core_show();
  }

  late final _flutterxel_core_showPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function()>>('flutterxel_core_show');
  late final _flutterxel_core_show = _flutterxel_core_showPtr
      .asFunction<bool Function()>();

  bool flutterxel_core_title(ffi.Pointer<ffi.Char> title) {
    return _flutterxel_core_title(title);
  }

  late final _flutterxel_core_titlePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Pointer<ffi.Char>)>>(
        'flutterxel_core_title',
      );
  late final _flutterxel_core_title = _flutterxel_core_titlePtr
      .asFunction<bool Function(ffi.Pointer<ffi.Char>)>();

  int flutterxel_core_frame_count() {
    return _flutterxel_core_frame_count();
  }

  late final _flutterxel_core_frame_countPtr =
      _lookup<ffi.NativeFunction<ffi.Uint64 Function()>>(
        'flutterxel_core_frame_count',
      );
  late final _flutterxel_core_frame_count = _flutterxel_core_frame_countPtr
      .asFunction<int Function()>();

  ffi.Pointer<ffi.Int32> flutterxel_core_framebuffer_ptr() {
    return _flutterxel_core_framebuffer_ptr();
  }

  late final _flutterxel_core_framebuffer_ptrPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Int32> Function()>>(
        'flutterxel_core_framebuffer_ptr',
      );
  late final _flutterxel_core_framebuffer_ptr =
      _flutterxel_core_framebuffer_ptrPtr
          .asFunction<ffi.Pointer<ffi.Int32> Function()>();

  int flutterxel_core_framebuffer_len() {
    return _flutterxel_core_framebuffer_len();
  }

  late final _flutterxel_core_framebuffer_lenPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>(
        'flutterxel_core_framebuffer_len',
      );
  late final _flutterxel_core_framebuffer_len =
      _flutterxel_core_framebuffer_lenPtr.asFunction<int Function()>();

  bool flutterxel_core_btn(int key) {
    return _flutterxel_core_btn(key);
  }

  late final _flutterxel_core_btnPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Int32)>>(
        'flutterxel_core_btn',
      );
  late final _flutterxel_core_btn = _flutterxel_core_btnPtr
      .asFunction<bool Function(int)>();

  bool flutterxel_core_btnp(int key, int hold, int period) {
    return _flutterxel_core_btnp(key, hold, period);
  }

  late final _flutterxel_core_btnpPtr =
      _lookup<
        ffi.NativeFunction<ffi.Bool Function(ffi.Int32, ffi.Int32, ffi.Int32)>
      >('flutterxel_core_btnp');
  late final _flutterxel_core_btnp = _flutterxel_core_btnpPtr
      .asFunction<bool Function(int, int, int)>();

  bool flutterxel_core_btnr(int key) {
    return _flutterxel_core_btnr(key);
  }

  late final _flutterxel_core_btnrPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Int32)>>(
        'flutterxel_core_btnr',
      );
  late final _flutterxel_core_btnr = _flutterxel_core_btnrPtr
      .asFunction<bool Function(int)>();

  int flutterxel_core_btnv(int key) {
    return _flutterxel_core_btnv(key);
  }

  late final _flutterxel_core_btnvPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32)>>(
        'flutterxel_core_btnv',
      );
  late final _flutterxel_core_btnv = _flutterxel_core_btnvPtr
      .asFunction<int Function(int)>();

  bool flutterxel_core_mouse(bool visible) {
    return _flutterxel_core_mouse(visible);
  }

  late final _flutterxel_core_mousePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Bool)>>(
        'flutterxel_core_mouse',
      );
  late final _flutterxel_core_mouse = _flutterxel_core_mousePtr
      .asFunction<bool Function(bool)>();

  bool flutterxel_core_warp_mouse(double x, double y) {
    return _flutterxel_core_warp_mouse(x, y);
  }

  late final _flutterxel_core_warp_mousePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Double, ffi.Double)>>(
        'flutterxel_core_warp_mouse',
      );
  late final _flutterxel_core_warp_mouse = _flutterxel_core_warp_mousePtr
      .asFunction<bool Function(double, double)>();

  bool flutterxel_core_set_btn_state(int key, bool pressed) {
    return _flutterxel_core_set_btn_state(key, pressed);
  }

  late final _flutterxel_core_set_btn_statePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Int32, ffi.Bool)>>(
        'flutterxel_core_set_btn_state',
      );
  late final _flutterxel_core_set_btn_state = _flutterxel_core_set_btn_statePtr
      .asFunction<bool Function(int, bool)>();

  bool flutterxel_core_set_btn_value(int key, int value) {
    return _flutterxel_core_set_btn_value(key, value);
  }

  late final _flutterxel_core_set_btn_valuePtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Int32, ffi.Int32)>>(
        'flutterxel_core_set_btn_value',
      );
  late final _flutterxel_core_set_btn_value = _flutterxel_core_set_btn_valuePtr
      .asFunction<bool Function(int, int)>();

  bool flutterxel_core_cls(int col) {
    return _flutterxel_core_cls(col);
  }

  late final _flutterxel_core_clsPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Int32)>>(
        'flutterxel_core_cls',
      );
  late final _flutterxel_core_cls = _flutterxel_core_clsPtr
      .asFunction<bool Function(int)>();

  bool flutterxel_core_camera(int x, int y) {
    return _flutterxel_core_camera(x, y);
  }

  late final _flutterxel_core_cameraPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Int32, ffi.Int32)>>(
        'flutterxel_core_camera',
      );
  late final _flutterxel_core_camera = _flutterxel_core_cameraPtr
      .asFunction<bool Function(int, int)>();

  bool flutterxel_core_clip(int x, int y, int w, int h) {
    return _flutterxel_core_clip(x, y, w, h);
  }

  late final _flutterxel_core_clipPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(ffi.Int32, ffi.Int32, ffi.Int32, ffi.Int32)
        >
      >('flutterxel_core_clip');
  late final _flutterxel_core_clip = _flutterxel_core_clipPtr
      .asFunction<bool Function(int, int, int, int)>();

  bool flutterxel_core_pal(int col1, int col2) {
    return _flutterxel_core_pal(col1, col2);
  }

  late final _flutterxel_core_palPtr =
      _lookup<ffi.NativeFunction<ffi.Bool Function(ffi.Int32, ffi.Int32)>>(
        'flutterxel_core_pal',
      );
  late final _flutterxel_core_pal = _flutterxel_core_palPtr
      .asFunction<bool Function(int, int)>();

  bool flutterxel_core_pset(int x, int y, int col) {
    return _flutterxel_core_pset(x, y, col);
  }

  late final _flutterxel_core_psetPtr =
      _lookup<
        ffi.NativeFunction<ffi.Bool Function(ffi.Int32, ffi.Int32, ffi.Int32)>
      >('flutterxel_core_pset');
  late final _flutterxel_core_pset = _flutterxel_core_psetPtr
      .asFunction<bool Function(int, int, int)>();

  int flutterxel_core_pget(int x, int y) {
    return _flutterxel_core_pget(x, y);
  }

  late final _flutterxel_core_pgetPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int32, ffi.Int32)>>(
        'flutterxel_core_pget',
      );
  late final _flutterxel_core_pget = _flutterxel_core_pgetPtr
      .asFunction<int Function(int, int)>();

  bool flutterxel_core_line(int x1, int y1, int x2, int y2, int col) {
    return _flutterxel_core_line(x1, y1, x2, y2, col);
  }

  late final _flutterxel_core_linePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Bool Function(
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
            ffi.Int32,
          )
        >
      >('flutterxel_core_line');
  late final _flutterxel_core_line = _flutterxel_core_linePtr
      .asFunction<bool Function(int, int, int, int, int)>();
